--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/angelayknz/node-express-practice#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "knex": "^2.1.0",
     "nodemon": "^2.0.16",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "sqlite3": "^5.0.8"
   }
 }
